<resources>
    <string name="app_name">Gaia</string>
    <string name="txt_bar_consejos">Consejos</string>
    <string name="txt_bar_notificaciones">Notificaciones</string>
    <string name="txt_bar_perfil">Perfil</string>
    <string name="txt_bar_huerta">Mi Huerta</string>
    <string name="tabla_tomate">Tomate</string>
    <string name="tabla_espinaca">Espinaca</string>
    <string name="tabla_sandia">Sandia</string>
    <string name="tabla_zanahora">Zanahoria</string>
    <string name="tabla_ajo">Ajo</string>
    <string name="tabla_papa">Papa</string>
    <string name="txt_cosecha_tomate">Cosecha en 90 días</string>

</resources>