<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/huerta"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_leaf_48"
        android:title="@string/txt_bar_huerta"/>
    <item
        android:id="@+id/consejos"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_article_48"
        android:title="@string/txt_bar_consejos"/>
    <item
        android:id="@+id/notificaciones"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_48"
        android:title="@string/txt_bar_notificaciones"/>
    <item
        android:id="@+id/perfil"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_48"
        android:title="@string/txt_bar_perfil"/>

</menu>