<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tablaLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/md_theme_light_secondaryContainer"
    tools:context=".controlador.SugerenciaCultivoFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp">

        <TableRow android:background="@color/md_theme_light_secondaryContainer" android:padding="10dp">
            <ImageView
                android:id="@+id/imgTomate"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="mostrarDetallesTomate"
                android:contentDescription="@string/tabla_tomate"
                android:src="@drawable/tomate"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/tabla_espinaca"
                android:src="@drawable/espinaca" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/tabla_sandia"
                android:src="@drawable/sandia" />


        </TableRow>
        <TableRow android:background="@color/md_theme_light_secondaryContainer" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/tabla_tomate" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/tabla_espinaca" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/tabla_sandia" />
        </TableRow>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"/>
        <TableRow android:background="@color/md_theme_light_secondaryContainer" android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/tabla_zanahora"
                android:src="@drawable/zanahoria" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/tabla_ajo"
                android:src="@drawable/ajo" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/tabla_papa"
                android:src="@drawable/papa" />
        </TableRow>

        <TableRow android:background="@color/md_theme_light_secondaryContainer" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/tabla_zanahora" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/tabla_ajo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/tabla_papa" />

        </TableRow>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"/>

    </TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_gravity="bottom"
        app:hideOnScroll="true"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>